force-app/main/default/objects/Campaign/fields/Slack_Notification_All__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notification_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send a slack notification when any campaign member is added</description>
    <label>Slack Notification - All</label>
    <type>Checkbox</type>
</CustomField>