force-app/main/default/objects/Campaign/fields/Slack_Responded__c.field-meta.xml
<CustomField>
    <fullName>Slack_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send slack notification when new responded member is added</description>
    <label>Slack - Responded</label>
    <type>Checkbox</type>
</CustomField>