force-app/main/default/objects/Campaign/fields/SlackChannel__c.field-meta.xml
<CustomField>
    <fullName>SlackChannel__c</fullName>
    <description>Id of Slack channel used for notifications</description>
    <label>SlackChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>